--- a/doc_doxygen/latex/structlogur__t.tex
+++ b/doc_doxygen/latex/structlogur__t.tex
@@ -8,9 +8,9 @@ This structure blah blah blah...
 \doxysubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
-char $\ast$ \mbox{\hyperlink{structlogur__t_a15342da1a7a6f4ad62be9e1220cc0934}{log\+\_\+file}}
+int \mbox{\hyperlink{structlogur__t_a15342da1a7a6f4ad62be9e1220cc0934}{log\+\_\+file}}
 \item 
-int \mbox{\hyperlink{structlogur__t_a29d8e3be5239712cad44eb0e60c240ab}{log\+\_\+level}}
+log\+\_\+level\+\_\+t \mbox{\hyperlink{structlogur__t_a29d8e3be5239712cad44eb0e60c240ab}{log\+\_\+level}}
 \end{DoxyCompactItemize}
 
 
