--- a/doc_doxygen/latex/refman.tex
+++ b/doc_doxygen/latex/refman.tex
@@ -174,6 +174,7 @@
 \chapter{Class Index}
 \input{annotated}
 \chapter{Class Documentation}
+\input{structlogur__log__fmt__t}
 \input{structlogur__t}
 %--- End generated contents ---
 
