--- a/doc_doxygen/latex/structlogur__log__fmt__t.tex
+++ b/doc_doxygen/latex/structlogur__log__fmt__t.tex
@@ -3,14 +3,32 @@
 \doxysubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{structlogur__log__fmt__t_a75f10f9288432ed4a499a05a3ec7c4bd}\label{structlogur__log__fmt__t_a75f10f9288432ed4a499a05a3ec7c4bd}} 
-char $\ast$ {\bfseries func}
+\mbox{\Hypertarget{structlogur__log__fmt__t_a04fb6b2d0329cd862857e567c6996d7b}\label{structlogur__log__fmt__t_a04fb6b2d0329cd862857e567c6996d7b}} 
+char $\ast$ {\bfseries func\+\_\+name}
 \item 
-\mbox{\Hypertarget{structlogur__log__fmt__t_a828c9a06b52d05b82614aa492104a55f}\label{structlogur__log__fmt__t_a828c9a06b52d05b82614aa492104a55f}} 
-char $\ast$ {\bfseries file}
+\mbox{\Hypertarget{structlogur__log__fmt__t_a7ecd865b9de9bdd30e322df90c695d4b}\label{structlogur__log__fmt__t_a7ecd865b9de9bdd30e322df90c695d4b}} 
+char $\ast$ {\bfseries file\+\_\+name}
 \item 
-\mbox{\Hypertarget{structlogur__log__fmt__t_adfd699d052dee47c499c15be7f21f008}\label{structlogur__log__fmt__t_adfd699d052dee47c499c15be7f21f008}} 
-char $\ast$ {\bfseries line}
+\mbox{\Hypertarget{structlogur__log__fmt__t_a2061055929e6de9090457af03bd5a5ad}\label{structlogur__log__fmt__t_a2061055929e6de9090457af03bd5a5ad}} 
+int {\bfseries line}
+\item 
+\mbox{\Hypertarget{structlogur__log__fmt__t_a9e0c3913497bea83deecba74f5446d45}\label{structlogur__log__fmt__t_a9e0c3913497bea83deecba74f5446d45}} 
+char $\ast$ {\bfseries time}
+\item 
+\mbox{\Hypertarget{structlogur__log__fmt__t_a1aa5c597b3597874657d96fb17b6f7f2}\label{structlogur__log__fmt__t_a1aa5c597b3597874657d96fb17b6f7f2}} 
+char $\ast$ {\bfseries date}
+\item 
+\mbox{\Hypertarget{structlogur__log__fmt__t_a6f94dd3fa61a8831f9c6293463e48cc9}\label{structlogur__log__fmt__t_a6f94dd3fa61a8831f9c6293463e48cc9}} 
+char $\ast$ {\bfseries timestamp}
+\item 
+\mbox{\Hypertarget{structlogur__log__fmt__t_a33dd76ad06075447bf303ae1e8400761}\label{structlogur__log__fmt__t_a33dd76ad06075447bf303ae1e8400761}} 
+char $\ast$ {\bfseries message}
+\item 
+\mbox{\Hypertarget{structlogur__log__fmt__t_ac806fe57c8077992c43bf59ac14c1920}\label{structlogur__log__fmt__t_ac806fe57c8077992c43bf59ac14c1920}} 
+int {\bfseries pid}
+\item 
+\mbox{\Hypertarget{structlogur__log__fmt__t_a2409d54892cf0c128af1f4e3eed10229}\label{structlogur__log__fmt__t_a2409d54892cf0c128af1f4e3eed10229}} 
+int {\bfseries tid}
 \end{DoxyCompactItemize}
 
 
