--- a/doc_doxygen/latex/structlogur__t.tex
+++ b/doc_doxygen/latex/structlogur__t.tex
@@ -8,6 +8,9 @@ This structure blah blah blah...
 \doxysubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
+\mbox{\Hypertarget{structlogur__t_a021be81574b7bf7b70763f972ace79fb}\label{structlogur__t_a021be81574b7bf7b70763f972ace79fb}} 
+\mbox{\hyperlink{structlogur__log__fmt__t}{logur\+\_\+log\+\_\+fmt\+\_\+t}} {\bfseries log\+\_\+fmt}
+\item 
 int \mbox{\hyperlink{structlogur__t_a15342da1a7a6f4ad62be9e1220cc0934}{log\+\_\+file}}
 \item 
 log\+\_\+level\+\_\+t \mbox{\hyperlink{structlogur__t_a29d8e3be5239712cad44eb0e60c240ab}{log\+\_\+level}}
