--- a/doc_doxygen/latex/structlogur__log__fmt__t.tex
+++ b/doc_doxygen/latex/structlogur__log__fmt__t.tex
@@ -21,8 +21,8 @@ char $\ast$ {\bfseries date}
 \mbox{\Hypertarget{structlogur__log__fmt__t_a6f94dd3fa61a8831f9c6293463e48cc9}\label{structlogur__log__fmt__t_a6f94dd3fa61a8831f9c6293463e48cc9}} 
 char $\ast$ {\bfseries timestamp}
 \item 
-\mbox{\Hypertarget{structlogur__log__fmt__t_a33dd76ad06075447bf303ae1e8400761}\label{structlogur__log__fmt__t_a33dd76ad06075447bf303ae1e8400761}} 
-char $\ast$ {\bfseries message}
+\mbox{\Hypertarget{structlogur__log__fmt__t_ae99159a895e71b6bf59b56babb4ad580}\label{structlogur__log__fmt__t_ae99159a895e71b6bf59b56babb4ad580}} 
+char $\ast$ {\bfseries msg}
 \item 
 \mbox{\Hypertarget{structlogur__log__fmt__t_ac806fe57c8077992c43bf59ac14c1920}\label{structlogur__log__fmt__t_ac806fe57c8077992c43bf59ac14c1920}} 
 int {\bfseries pid}
