--- a/doc_doxygen/latex/structlogur__log__fmt__t.tex
+++ b/doc_doxygen/latex/structlogur__log__fmt__t.tex
@@ -3,8 +3,8 @@
 \doxysubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{structlogur__log__fmt__t_a04fb6b2d0329cd862857e567c6996d7b}\label{structlogur__log__fmt__t_a04fb6b2d0329cd862857e567c6996d7b}} 
-char $\ast$ {\bfseries func\+\_\+name}
+\mbox{\Hypertarget{structlogur__log__fmt__t_a188e780574b424a78bdedd5b040074dc}\label{structlogur__log__fmt__t_a188e780574b424a78bdedd5b040074dc}} 
+const char $\ast$ {\bfseries func\+\_\+name}
 \item 
 \mbox{\Hypertarget{structlogur__log__fmt__t_a7ecd865b9de9bdd30e322df90c695d4b}\label{structlogur__log__fmt__t_a7ecd865b9de9bdd30e322df90c695d4b}} 
 char $\ast$ {\bfseries file\+\_\+name}
@@ -20,9 +20,6 @@ char $\ast$ {\bfseries date}
 \item 
 \mbox{\Hypertarget{structlogur__log__fmt__t_a6f94dd3fa61a8831f9c6293463e48cc9}\label{structlogur__log__fmt__t_a6f94dd3fa61a8831f9c6293463e48cc9}} 
 char $\ast$ {\bfseries timestamp}
-\item 
-\mbox{\Hypertarget{structlogur__log__fmt__t_ae99159a895e71b6bf59b56babb4ad580}\label{structlogur__log__fmt__t_ae99159a895e71b6bf59b56babb4ad580}} 
-char $\ast$ {\bfseries msg}
 \item 
 \mbox{\Hypertarget{structlogur__log__fmt__t_ac806fe57c8077992c43bf59ac14c1920}\label{structlogur__log__fmt__t_ac806fe57c8077992c43bf59ac14c1920}} 
 int {\bfseries pid}
